Fix hamburger menu button in dark mode

--- a/src/scss/_general.scss
+++ b/src/scss/_general.scss
@@ -16,12 +16,24 @@ body {
 	background: rgba(255, 255, 255, 0.8);
 }
 
+.bg-white-transparent-60 {
+	background: rgba(255, 255, 255, 0.4);
+}
+
 .bg-white-transparent-70 {
 	background: rgba(255, 255, 255, 0.3);
 }
 
 .hover\:bg-white-transparent-60:hover {
 	background: rgba(255, 255, 255, 0.4);
+}
+
+.hover\:bg-white-transparent-70:hover {
+	background: rgba(255, 255, 255, 0.3);
+}
+
+.focus\:border-white-transparent-70:focus {
+	border-color: rgba(255, 255, 255, 0.4);
 }
 
 .bg-black-transparent-40 {
